compute.tf
data "aws_ami" "ubuntu20" {
  owners      = ["099720109477"]
  most_recent = true

  filter {
    name   = "root-device-type"
    values = ["ebs"]
  }

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-focal-20.04-amd64-server-*"]
  }

  filter {
    name   = "architecture"
    values = ["x86_64"]
  }
}

resource "aws_key_pair" "k8s_key" {
  key_name   = "kubernetes"
  public_key = "-----BEGIN RSA PRIVATE KEY-----MIIEpAIBAAKCAQEAupK8yk+5QogFHOn3Ilp3nHBkNxuRkJtJk8+wRwxPBI9A3lB5/JANfw4+LmQaaAGHaUr6pdUEQxypuEhEE98LJnA2fkNk4ag1RpvVjLsweWVm9WZ0N3xak8AIAV3nMgrA2kY7IXK/jyyngpGRGy/XBMAhACAdcm69t3ZbznLeFlJVbxCy55tZeeQjtiM0tcGT+QI9SLuB4cB6tgc/EpOAQfUjoN4UudKNYdOEcVMbEYiy91L5yYcH2PjSEz2iKIDyXCl+0L8QiXW9oSbLSS5p/g3Qhw6Pc5URTsdigAPBBwXFb91JONbKjTn6cJ3XnqzaMNYhYG2/9UVd99ziCNIwhQIDAQABAoIBAEY3nZfio0231XzJTTp/o86bugvHc2RiHTHlE2nZ5w9HPtmsngyAxqOP37Uj9ZA5KxZkoqqw3fbIHdP+VqjH4 [...]
}

###K8S CONTROLLERS###
resource "aws_instance" "controller" {
  for_each      = toset(["0", "1", "2"])
  ami           = data.aws_ami.ubuntu20.id
  instance_type = "t3.micro"
  key_name      = aws_key_pair.k8s_key.key_name

  private_ip                  = "10.0.1.1${each.key}"
  subnet_id                   = aws_subnet.kubernetes.id
  vpc_security_group_ids      = [aws_security_group.k8s_sg.id]
  associate_public_ip_address = true
  tags = {
    Name = "controller-${each.key}"
  }
}
resource "aws_instance" "worker" {
  for_each      = toset(["0", "1", "2"])
  ami           = data.aws_ami.ubuntu20.id
  instance_type = "t3.micro"
  key_name      = aws_key_pair.k8s_key.key_name

  private_ip                  = "10.0.1.2${each.key}"
  subnet_id                   = aws_subnet.kubernetes.id
  vpc_security_group_ids      = [aws_security_group.k8s_sg.id]
  associate_public_ip_address = true
  tags = {
    Name    = "worker-${each.key}"
    PodCidr = "10.200.${each.key}.0/24"
  }
}
